--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn install && tsc",
-    "start": "node build/index.js",
-    "dev": "nodemon ./src/index.ts",
+    "start:prod": "node build/index.js",
+    "start": "nodemon ./src/index.ts",
     "knex": "./node_modules/.bin/knex --knexfile src/database/knexfile.ts",
     "db:migrate": "yarn knex migrate:latest src/database/knexfile.ts",
     "db:rollback": "yarn knex migrate:rollback src/database/knexfile.ts"
