--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=16.14.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
