--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "knex": "^1.0.7",
+    "mixpanel": "^0.16.0",
     "moment": "^2.29.3",
     "pg": "^8.7.3"
   }
