--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "nodemon": "^2.0.15",
     "semantic-release": "^19.0.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3"
   },
   "dependencies": {
     "axios": "^0.26.1",
