--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "node": ">=16.14.2"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
@@ -22,12 +27,7 @@
     "nodemon": "^2.0.15",
     "semantic-release": "^19.0.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
-    "@semantic-release/changelog": "^6.0.1",
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/release-notes-generator": "^10.0.3"
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -37,7 +37,7 @@
     "express": "^4.17.3",
     "knex": "^1.0.7",
     "mixpanel": "^0.16.0",
-    "moment": "^2.29.3",
+    "moment": "^2.29.4",
     "pg": "^8.7.3"
   }
 }
