--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "yarn install && tsc",
     "start:prod": "yarn db:migrate && node build/index.js",
     "start": "nodemon ./src/index.ts",
-    "knex": "./node_modules/.bin/knex --knexfile ./knexfile.ts",
-    "db:migrate": "yarn knex migrate:latest ./knexfile.ts",
-    "db:rollback": "yarn knex migrate:rollback ./knexfile.ts"
+    "knex": "./node_modules/.bin/knex --knexfile src/database/knexfile.ts",
+    "db:migrate": "yarn knex migrate:latest src/database/knexfile.ts",
+    "db:rollback": "yarn knex migrate:rollback src/database/knexfile.ts"
   },
   "engines": {
     "node": ">=16.14.2"
