--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.23",
     "nodemon": "^2.0.15",
     "semantic-release": "^19.0.2",
