--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-joi-validation": "^5.0.1",
+    "joi": "^17.8.3",
     "knex": "^1.0.7",
     "mixpanel": "^0.16.0",
     "moment": "^2.29.4",
