--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-joi-validation": "^5.0.1",
+    "helmet": "^6.0.1",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "knex": "^1.0.7",
