--- a/package.json
+++ b/package.json
@@ -26,8 +26,13 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "^17.0.23",
+    "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "@typescript-eslint/parser": "latest",
+    "eslint": "^8.36.0",
     "nodemon": "^2.0.15",
+    "prettier": "2.8.4",
     "semantic-release": "^19.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
@@ -43,6 +48,7 @@
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
     "knex": "^1.0.7",
+    "lodash": "^4.17.21",
     "mixpanel": "^0.16.0",
     "moment": "^2.29.4",
     "passport": "^0.6.0",
