--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "yarn tsc",
     "start:prod": "yarn db:migrate && node build/index.js",
     "start": "nodemon ./src/index.ts",
-    "knex": "knex --knexfile src/database/knexfile.ts",
+    "knex": "yarn knex --knexfile src/database/knexfile.ts",
     "db:migrate": "yarn knex migrate:latest",
     "db:rollback": "yarn knex migrate:rollback"
   },
