--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "build": "yarn tsc",
     "start:prod": "yarn db:migrate && node build/index.js",
     "start": "nodemon ./src/index.ts",
-    "knex": "yarn knex --knexfile src/database/knexfile.ts",
-    "db:migrate": "yarn knex migrate:latest",
-    "db:rollback": "yarn knex migrate:rollback"
+    "db:migrate": "yarn run knex migrate:latest --knexfile src/database/knexfile.ts",
+    "db:rollback": "yarn run knex migrate:rollback --knexfile src/database/knexfile.ts"
   },
   "engines": {
     "node": ">=16.14.2"
