remove unplugged stuff

--- a/package.json
+++ b/package.json
@@ -55,13 +55,5 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.7.3"
   },
-  "packageManager": "yarn@3.4.1",
-  "dependenciesMeta": {
-    "bcrypt@5.1.0": {
-      "unplugged": true
-    },
-    "knex@1.0.7": {
-      "unplugged": true
-    }
-  }
+  "packageManager": "yarn@3.4.1"
 }
