--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NODE_ENV=development
+BASE_URL=http://localhost:3000
 DATABASE_URL=postgres://postgres:postgres@127.0.0.1:5432/growth10
 MIXPANEL_TOKEN=
 JWT_SECRET=
+SENDGRID_API_KEY=
