--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -53,7 +54,8 @@
     "moment": "^2.29.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "ulid": "^2.3.0"
   },
   "packageManager": "yarn@3.4.1"
 }
