--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   release:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latestre
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -14,9 +14,9 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 18
 
       - name: Install Yarn
         run: npm install -g yarn
@@ -35,7 +35,7 @@ jobs:
           fetch-depth: 0
           ref: main
       - name: Merge main into develop
-        uses: everlytic/branch-merge@1.1.0
+        uses: everlytic/branch-merge@1.1.2
         with:
           github_token: ${{ secrets.MENTUMM_GITHUB_RV }}
           source_ref: ${{ github.ref }}
