--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcrypt": "^5.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
-    "@types/node": "^17.0.23",
-    "@types/passport": "^1.0.12",
-    "@types/passport-jwt": "^3.0.8",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
+    "@types/node": "^17.0.45",
+    "@types/passport": "^1.0.14",
+    "@types/passport-jwt": "^3.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
     "eslint": "^8.36.0",
     "nodemon": "^2.0.15",
     "prettier": "2.8.4",
