--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
+    "@types/multer": "^1.4.11",
     "@types/node": "^17.0.23",
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "aws-sdk": "^2.1501.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -52,6 +54,7 @@
     "lodash": "^4.17.21",
     "mixpanel": "^0.16.0",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.7.3",
