--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
     "@sendgrid/mail": "^7.7.0",
     "aws-sdk": "^2.1501.0",
     "axios": "^0.26.1",
@@ -47,6 +48,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-joi-validation": "^5.0.1",
+    "graphql": "^16.8.1",
     "helmet": "^6.0.1",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
